--- a/default.html
+++ b/default.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="main.js"></script>
   </head>
   <body>
     <!-- <h1>SocialCompany Today</h1> -->
     <ul class="flex-container">
       <li class="flex-item">1</li>
       <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
+      <li class="flex-item">
+        <article class="clock">
+          <div class="hours-container">
+            <div class="hours"></div>
+          </div>
+          <div class="minutes-container">
+            <div class="minutes"></div>
+          </div>
+          <div class="seconds-container">
+            <div class="seconds"></div>
+          </div>
+        </article>
+      </li>
       <li class="flex-item">4</li>
       <li class="flex-item">5</li>
       <li class="flex-item">6</li>
