--- a/default.html
+++ b/default.html
@@ -7,10 +7,11 @@
     <ul class="flex-container">
       <li class="flex-item">1</li>
       <li class="flex-item">2</li>
-      <li class="flex-item">3</li>
+      <li class="flex-item"><div class="time"></div><div class="date"></div></li>
       <li class="flex-item">4</li>
       <li class="flex-item">5</li>
       <li class="flex-item">6</li>
-    </ul>
+    </ul> 
+    <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
