--- a/default.html
+++ b/default.html
@@ -5,13 +5,13 @@
   <body>
     <!-- <h1>SocialCompany Today</h1> -->
     <ul class="flex-container">
-      <li class="flex-item">1</li>
-      <li class="flex-item">2</li>
-      <li class="flex-item"><div class="time"></div><div class="date"></div></li>
-      <li class="flex-item">4</li>
-      <li class="flex-item">5</li>
-      <li class="flex-item">6</li>
-    </ul> 
+      <li class="flex-item es inv">EXAS Stock</li>
+      <li class="flex-item mo">Milio's Current</li>
+      <li class="flex-item sc"><div class="time"></div><div class="date"></div><div class="weather">sunny</div></li>
+      <li class="flex-item es">latest build on Exact</li>
+      <li class="flex-item mo inv">latest build, % complete</li>
+      <li class="flex-item sc">Cal</li>
+    </ul>
     <script src="main.js" type="text/javascript"></script>
   </body>
 </html>
